--- a/src/System.Private.Interop/src/System.Private.Interop.csproj
+++ b/src/System.Private.Interop/src/System.Private.Interop.csproj
@@ -93,6 +93,7 @@
     <Compile Condition="'$(EnableWinRT)'=='true'" Include="Shared\WindowsRuntimeMarshal.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="System\Runtime\InteropServices\AllowReversePInvokeCallsAttribute.cs" />
     <Compile Include="System\Runtime\InteropServices\ArrayWithOffset.cs" />
     <Compile Include="System\Runtime\InteropServices\BestFitMappingAttribute.cs" />
     <Compile Include="System\Runtime\InteropServices\BStrWrapper.cs" />
@@ -115,10 +116,13 @@
     <Compile Include="System\Runtime\InteropServices\DispIdAttribute.cs" />
     <Compile Include="System\Runtime\InteropServices\DllImportSearchPath.cs" />
     <Compile Include="System\Runtime\InteropServices\ErrorWrapper.cs" />
+    <Compile Include="System\Runtime\InteropServices\HandleRef.cs" />
     <Compile Include="System\Runtime\InteropServices\InteropEventProvider.cs" />
     <Compile Include="System\Runtime\InteropServices\GuidAttribute.cs" />
     <Compile Include="System\Runtime\InteropServices\InAttribute.cs" />
     <Compile Include="System\Runtime\InteropServices\ICustomAdapter.cs" />
+    <Compile Include="System\Runtime\InteropServices\ICustomFactory.cs" />
+    <Compile Include="System\Runtime\InteropServices\ICustomMarshaler.cs" />
     <Compile Include="System\Runtime\InteropServices\ICustomQueryInterface.cs" />
     <Compile Include="System\Runtime\InteropServices\InterfaceTypeAttribute.cs" />
     <Compile Include="System\Runtime\InteropServices\InvalidComObjectException.cs" />
@@ -131,6 +135,7 @@
     <Compile Include="System\Runtime\InteropServices\MissingInteropDataException.cs" />
     <Compile Include="System\Runtime\InteropServices\OptionalAttribute.cs" />
     <Compile Include="System\Runtime\InteropServices\PreserveSigAttribute.cs" />
+    <Compile Include="System\Runtime\InteropServices\ProgIdAttribute.cs" />
     <Compile Include="System\Runtime\InteropServices\SafeArrayRankMismatchException.cs" />
     <Compile Include="System\Runtime\InteropServices\SafeArrayTypeMismatchException.cs" />
     <Compile Include="System\Runtime\InteropServices\SEHException.cs" />
