NativeLayout for universal generic template types - Enable use of the UniversalCanonLayoutAlgorithm during compilation, and jit based runtime - Move type system determination of method signatures that require a calling convention converter at runtime from being runtime only code to common (For use in both runtime and compilation) (There are 2 more implementation in the runtime, one of which works directly off of native format metadata, and the other works directly off of NativeLayout method signatures) - Enhance indeterminate type size computation TryComputeHasInstantiationDeterminedSize to depend on recent work to support indeterminate type size computation - Add support for generating field layout info for universal generic types - Add support for generating vtable signature info for universal generic types that need the use of calling convention converters to translate standard calling convention to universal generic calling convention - Add support for generating delegate invoke method signatures - When emitting EETypes for universal generic subtypes, if the size is indeterminate simply emit minimum object size
[tfs-changeset: 1651556]

--- a/src/ILCompiler.Compiler/src/ILCompiler.Compiler.csproj
+++ b/src/ILCompiler.Compiler/src/ILCompiler.Compiler.csproj
@@ -56,6 +56,9 @@
     <Compile Include="..\..\Common\src\Internal\Runtime\RuntimeConstants.cs">
       <Link>Common\RuntimeConstants.cs</Link>
     </Compile>
+    <Compile Include="..\..\Common\src\Internal\Runtime\UniversalGenericParameterLayout.cs">
+      <Link>Common\UniversalGenericParameterLayout.cs</Link>
+    </Compile>
     <Compile Include="..\..\Common\src\Internal\Text\Utf8String.cs">
       <Link>Common\Utf8String.cs</Link>
     </Compile>
