NS2.0 Add String.Intern
This won't cover literals but otherwise, gets the
job done.

Note that LockFreeReaderHashTable was declared public
(and so were a ton of classes that derived from it,
so I couldn't just make it private.)

Including it in CoreLib.dll means no one above
CoreLib can include it - they'll just the public
one from CoreLib.dll.

--- a/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
+++ b/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
@@ -427,6 +427,7 @@
     <Compile Include="System\Single.cs" />
     <Compile Include="System\String.cs" />
     <Compile Include="System\String.Comparison.cs" />
+    <Compile Include="System\String.Intern.cs" />
     <Compile Include="System\String.Manipulation.cs" />
     <Compile Include="System\String.Searching.cs" />
     <Compile Include="System\Array.cs" />
@@ -872,6 +873,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\Common\src\TypeSystem\Common\Utilities\LockFreeReaderHashtable.cs">
+      <Link>Utilities\LockFreeReaderHashtable.cs</Link>
+    </Compile>
     <Compile Include="..\..\Common\src\System\Collections\Generic\LowLevelList.cs">
       <Link>System\Collections\Generic\LowLevelList.cs</Link>
     </Compile>
