Add MathF type and functions , System.Runtime.Extensions will have type forwarder to this
[tfs-changeset: 1652616]

--- a/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
+++ b/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
@@ -329,6 +329,7 @@
     <Compile Include="System\Int64.cs" />
     <Compile Include="System\Intptr.cs" />
     <Compile Include="System\Math.cs" />
+    <Compile Include="System\MathF.cs" />
     <Compile Include="System\MissingFieldException.cs" />
     <Compile Include="System\MissingMemberException.cs" />
     <Compile Include="System\MissingMethodException.cs" />
