NS2.0 Add back the String constructors taking sbyte* (#3162)
Ctor(sbyte*) is a port of

  COMString::StringInitCharPtr
  (https://github.com/dotnet/coreclr/blob/master/src/classlibnative/bcltype/stringnative.cpp#L98)

Ctor(sbyte*, int, int) is a port of

  COMString::StringInitCharPtrPartial
  (https://github.com/dotnet/coreclr/blob/master/src/classlibnative/bcltype/stringnative.cpp#L117)

Ctor(sbyte*, int, int, Encoding) is copied from CoreCLR

  (https://github.com/dotnet/coreclr/blob/master/src/mscorlib/src/System/String.cs#L229)

CreateStringForSByteConstructor() is a rough port of
  StringObject::StringInitCharHelper() (without the "-1" length case and other length checks)

  (https://github.com/dotnet/coreclr/blob/master/src/vm/object.cpp#L2073)

--- a/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
+++ b/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
@@ -637,6 +637,9 @@
     <Compile Include="..\..\Common\src\Interop\Windows\ntdll\Interop.ZeroMemory.cs">
       <Link>Interop\Windows\ntdll\Interop.ZeroMemory.cs</Link>
     </Compile>
+    <Compile Include="..\..\Common\src\Interop\Windows\kernel32\Interop.MultiByteToWideChar.cs">
+      <Link>Interop\Windows\kernel32\Interop.MultiByteToWideChar.cs</Link>
+    </Compile>
     <Compile Include="..\..\Common\src\Interop\Windows\kernel32\Interop.WideCharToMultiByte.cs">
       <Link>Interop\Windows\kernel32\Interop.WideCharToMultiByte.cs</Link>
     </Compile>
