NS2.0 - Finish TypeLoadException.cs
This also refactors the file in case we want to share
it with CoreCLR. Still deciding if that's a good idea,
but the cleanup is valid either way.

--- a/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
+++ b/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
@@ -524,6 +524,7 @@
     <Compile Include="System\TypedReference.cs" />
     <Compile Include="System\TypeUnificationKey.cs" />
     <Compile Include="System\TypeLoadException.cs" />
+    <Compile Include="System\TypeLoadException.CoreRT.cs" />
     <Compile Include="System\UInt16.cs" />
     <Compile Include="System\UInt32.cs" />
     <Compile Include="System\UInt64.cs" />
