--- a/src/packaging/packages.targets
+++ b/src/packaging/packages.targets
@@ -25,7 +25,7 @@
             <CoreFxPackageVersion>4.4.0-beta-24913-02</CoreFxPackageVersion>
             <NetCoreAppPackageVersion>2.0.0-beta-001663-00</NetCoreAppPackageVersion>
 
-            <JitPackageVersion>2.0.0-beta-25117-06</JitPackageVersion>
+            <JitPackageVersion>2.0.0-preview1-25204-02</JitPackageVersion>
 
             <MicrosoftNetCoreNativePackageVersion>2.0.0-beta-25021-03</MicrosoftNetCoreNativePackageVersion>
 
