--- a/src/packaging/project.json
+++ b/src/packaging/project.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "Microsoft.NETCore.Jit": "2.0.0-beta-25117-06",
+    "Microsoft.NETCore.Jit": "2.0.0-preview1-25204-02",
     "Microsoft.DotNet.ObjectWriter": "1.0.17-prerelease-00002"
   },
   "frameworks": {
