--- a/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
+++ b/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
@@ -205,6 +205,7 @@
     <Compile Include="System\AggregateException.cs" />
     <Compile Include="System\AppContext.cs" />
     <Compile Include="System\AppContextDefaultValues.cs" />
+    <Compile Include="System\ArgIterator.cs" />
     <Compile Include="System\ArgumentException.cs" />
     <Compile Include="System\ArgumentOutOfRangeException.cs" />
     <Compile Include="System\ArraySegment.cs" />
@@ -315,6 +316,7 @@
     <Compile Include="System\ParseNumbers.cs" />
     <Compile Include="System\Progress.cs" />
     <Compile Include="System\Reflection\MissingMetadataException.cs" />
+    <Compile Include="System\RuntimeArgumentHandle.cs" />
     <Compile Include="System\Runtime\CompilerServices\AccessedThroughPropertyAttribute.cs" />
     <Compile Include="System\Runtime\CompilerServices\AsyncStateMachineAttribute.cs" />
     <Compile Include="System\Runtime\CompilerServices\CallerFilePathAttribute.cs" />
