Move FileLoadException to shared partition.
CoreRT side of https://github.com/dotnet/coreclr/pull/10764

--- a/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
+++ b/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
@@ -252,7 +252,7 @@
     <Compile Include="System\IO\DirectoryNotFoundException.cs" />
     <Compile Include="System\IO\EndOfStreamException.cs" />
     <Compile Include="System\IO\FileAccess.cs" />
-    <Compile Include="System\IO\FileLoadException.cs" />
+    <Compile Include="System\IO\FileLoadException.CoreRT.cs" />
     <Compile Include="System\IO\FileMode.cs" />
     <Compile Include="System\IO\FileNotFoundException.cs" />
     <Compile Include="System\IO\FileShare.cs" />
