--- a/src/System.Private.Jit/src/System.Private.Jit.csproj
+++ b/src/System.Private.Jit/src/System.Private.Jit.csproj
@@ -66,6 +66,7 @@
     <Compile Include="$(CommonBasePath)\Internal\Text\Utf8String.cs" />
     <Compile Include="$(CommonBasePath)\Internal\Text\Utf8StringBuilder.cs" />
     <Compile Include="$(CommonBasePath)\System\Collections\Generic\ArrayBuilder.cs" />
+    <Compile Include="$(TypeSystemBasePath)\Mangling\IPrefixMangledType.cs" />
     <Compile Include="$(TypeSystemBasePath)\IL\EcmaMethodIL.cs" />
     <Compile Include="$(TypeSystemBasePath)\IL\ILProvider.cs" />
     <Compile Include="$(TypeSystemBasePath)\IL\McgInteropSupport.cs" />
