Move two mis-filed Mangling dot files
Move two name mangling dot files under the Common folder
Add a regression test for the NativeStructType naming

--- a/src/ILCompiler.TypeSystem/src/ILCompiler.TypeSystem.csproj
+++ b/src/ILCompiler.TypeSystem/src/ILCompiler.TypeSystem.csproj
@@ -452,13 +452,13 @@
     <Compile Include="..\..\Common\src\TypeSystem\Sorting\MethodForInstantiatedType.Sorting.cs">
       <Link>TypeSystem\Sorting\MethodForInstantiatedType.Sorting.cs</Link>
     </Compile>
-    <Compile Include="TypeSystem\Interop\IL\NativeStructType.Mangling.cs">
+    <Compile Include="..\..\Common\src\TypeSystem\Interop\IL\NativeStructType.Mangling.cs">
       <Link>TypeSystem\Interop\IL\NativeStructType.Mangling.cs</Link>
     </Compile>
     <Compile Include="..\..\Common\src\TypeSystem\Interop\IL\PInvokeDelegateWrapper.cs">
       <Link>TypeSystem\Interop\IL\PInvokeDelegateWrapper.cs</Link>
     </Compile>
-    <Compile Include="TypeSystem\Interop\IL\PInvokeDelegateWrapper.Mangling.cs">
+    <Compile Include="..\..\Common\src\TypeSystem\Interop\IL\PInvokeDelegateWrapper.Mangling.cs">
       <Link>TypeSystem\Interop\IL\PInvokeDelegateWrapper.Mangling.cs</Link>
     </Compile>
     <Compile Include="..\..\Common\src\TypeSystem\Interop\IL\PInvokeDelegateWrapper.Sorting.cs">
