NS2.0 System.Text: Encoder, Decoder, EncodingInfo, and a bit of Encoding
     This change gets the System.Text.Encoder, Decoder, and EncodingInfo types to match N 2.0 surface area. Encoder.cs and Decoder.cs have been changed to be very similar to the CoreCLR versions, in anticipation of a move to the Shared partition.

     The change also addresses some but not all of the NS2.0 discrepancies in System.Text.Encoding. The following APIs have not been ported:

     BodyName
     HeaderName
     IsBrowserDisplay
     IsBrowserSave
     IsMailNewsDisplay
     IsMailNewsSave
     WindowsCodePage

[tfs-changeset: 1653566]

--- a/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
+++ b/src/System.Private.CoreLib/src/System.Private.CoreLib.csproj
@@ -444,6 +444,7 @@
     <Compile Include="System\Text\Encoding.cs" />
     <Compile Include="System\Text\EncodingData.cs" />
     <Compile Include="System\Text\EncodingForwarder.cs" />
+    <Compile Include="System\Text\EncodingInfo.cs" />
     <Compile Include="System\Text\EncodingNLS.cs" />
     <Compile Include="System\Text\EncodingProvider.cs" />
     <Compile Include="System\Text\EncodingTable.cs" />
