Add McgInternalType Attribute
 Change Description:
     In dynamic interop, we added a bunch of adapter into System.Private.Interop. During SharedLibrary Production build, analyzer will mark these adapters as CCW, which is incorrect, since these types doesn't need any ccw support.

     Changes:
     1. Add McgInternalType. Currently this attribute can only be used class in S.P.Interop to avoid mcg marking them as CCW.
     2. Update adapters to use this atribute

[tfs-changeset: 1653817]

--- a/src/System.Private.Interop/src/System.Private.Interop.csproj
+++ b/src/System.Private.Interop/src/System.Private.Interop.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Shared\McgGeneratedMarshallingCodeAttribute.cs" />
     <Compile Include="Shared\McgGeneratedNativeCallCodeAttribute.cs" />
     <Compile Include="Shared\McgHelpers.cs" />
+    <Compile Include="Shared\McgInternalTypeAttribute.cs" />
     <Compile Include="Shared\McgIntrinsics.cs" />
     <Compile Include="Shared\McgMarshal.cs" />
     <Compile Include="Shared\McgMethodNameAttribute.cs" />
